@@ -46,6 +46,7 @@
   - is_hypotenuse_number?/1
   - is_practical_number?/1
   - is_primary_pseudoperfect_number?/1
+  - is_pseudoperfect_number?/1
   
 
 ### Sequences
@@ -64,7 +65,7 @@
  - A009003 - Hypotenuse numbers
  - A005153 - Practical numbers
  - A054377 - Primary pseudoperfect numbers
-
+ - A005835 - Pseudoperfect (or semiperfect) numbers
 
 
 
